# CodeShield

./: .env.example  .gitignore  .leanmcpignore  CONTRIBUTING.md  Dockerfile  README.md  TEST_SUMMARY.md  debug_comet.py  demo_full.py  demo_token_efficiency.py  main.py  mcp_config.json  pyproject.toml  test_all_features.py  test_api.py  test_daytona.py  test_quick.py  test_sandbox.py  verify_demo.py
.github/workflows/: workflow.yml
docs/: DEVPOST_SUBMISSION.md
examples/: broken_code.py  sample_codebase.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CodeEditor.tsx  Docs.tsx  Hero.tsx  Home.tsx  Logo.tsx  ReactiveCodeGraph.tsx  ResultsPanel.tsx
frontend/src/services/: api.ts
npm/: README.md  package-lock.json  package.json
src/codeshield/: __init__.py  api_server.py  cli.py  sdk.py
src/codeshield/contextvault/: __init__.py  autosave.py  capture.py  restore.py
src/codeshield/mcp/: hooks.py  server.py
src/codeshield/plugins/: __init__.py
src/codeshield/styleforge/: __init__.py  corrector.py
src/codeshield/trustgate/: __init__.py  checker.py  sandbox.py
src/codeshield/trustgate/engine/: __init__.py  executor.py  graphs.py  meta_ast.py  parser.py  rules.py
src/codeshield/utils/: __init__.py  daytona.py  leanmcp.py  live_metrics.py  llm.py  metrics.py  token_optimizer.py
tests/: test_comprehensive.py  test_contextvault.py  test_engine_multilang.py  test_styleforge.py  test_trustgate.py
